--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        versions: [8]
+        versions: [8, 11]
         type: [jdk, jre]
         os: [alpine, debian]
     env:
