--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,16 +32,29 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
     -
-      name: Build and push
+      name: Build and push debian
       uses: docker/build-push-action@v2
+      if: matrix.os == 'debian'
       with:
         context: .
-        file: ./${{ matrix.versions }}/${{ matrix.type }}/${{ matrix.os }}/Dockerfile
+        file: ./${{ matrix.version }}/${{ matrix.type }}/${{ matrix.os }}/Dockerfile
         platforms: linux/amd64
         pull: true
         push: true
         tags: |
-          ${{ env.repo }}:${{ matrix.versions }}-${{ matrix.type }}-${{ matrix.os }}
+          ${{ env.repo }}:${{ matrix.os }}-${{ matrix.type }}-${{ matrix.os }}
+    -
+      name: Build and push version 8 (alpine only)
+      uses: docker/build-push-action@v2
+      if: matrix.os == 'alpine'
+      with:
+        context: .
+        file: ./8/${{ matrix.type }}/${{ matrix.os }}/Dockerfile
+        platforms: linux/amd64
+        pull: true
+        push: true
+        tags: |
+          ${{ env.repo }}:8-${{ matrix.type }}-${{ matrix.os }}
     -
       name: Push aliases
       uses: docker/build-push-action@v2
