--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,12 +37,12 @@ jobs:
       if: matrix.os == 'debian'
       with:
         context: .
-        file: ./${{ matrix.version }}/${{ matrix.type }}/${{ matrix.os }}/Dockerfile
+        file: ./${{ matrix.versions }}/${{ matrix.type }}/${{ matrix.os }}/Dockerfile
         platforms: linux/amd64
         pull: true
         push: true
         tags: |
-          ${{ env.repo }}:${{ matrix.os }}-${{ matrix.type }}-${{ matrix.os }}
+          ${{ env.repo }}:${{ matrix.versions }}-${{ matrix.type }}-${{ matrix.os }}
     -
       name: Build and push version 8 (alpine only)
       uses: docker/build-push-action@v2
