--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,10 +1,6 @@
-name: Publish Docker images
+name: Build Docker images
 
-on:
-  push:
-    branches: [ master ]
-  schedule:
-    - cron:  '0 0 * * 0'
+on: pull_request
 
 jobs:
   build:
@@ -24,12 +20,6 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1.5.1
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v1.10.0
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
     - name: Build and push debian
       uses: docker/build-push-action@v2.6.1
       if: matrix.os == 'debian'
@@ -38,7 +28,7 @@ jobs:
         file: ./${{ matrix.versions }}/${{ matrix.type }}/${{ matrix.os }}/Dockerfile
         platforms: linux/amd64
         pull: true
-        push: true
+        push: false
         tags: |
           ${{ env.repo }}:${{ matrix.versions }}-${{ matrix.type }}-${{ matrix.os }}
 
@@ -50,25 +40,6 @@ jobs:
         file: ./8/${{ matrix.type }}/${{ matrix.os }}/Dockerfile
         platforms: linux/amd64
         pull: true
-        push: true
+        push: false
         tags: |
           ${{ env.repo }}:8-${{ matrix.type }}-${{ matrix.os }}
-
-    - name: Push aliases
-      uses: docker/build-push-action@v2.6.1
-      if: matrix.os == 'alpine'
-      with:
-        context: .
-        file: ./8/${{ matrix.type }}/${{ matrix.os }}/Dockerfile
-        platforms: linux/amd64
-        pull: true
-        push: true
-        tags: |
-          ${{ env.repo }}:8-${{ matrix.type }}
-
-    - name: Update repo description
-      uses: peter-evans/dockerhub-description@v2.4.3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
-        repository: "${{ env.repo }}"
