added bash -xe instead of sh install_certs

--- a/11/jdk/alpine/Dockerfile
+++ b/11/jdk/alpine/Dockerfile
@@ -33,4 +33,4 @@ RUN apk add --no-cache $MUSL_LOCALE_DEPS \
     && cd .. && rm -r musl-locales-master
 
 COPY install_certs /tmp/install_certs
-RUN sh /tmp/install_certs
+RUN bash -xe /tmp/install_certs
