--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        versions: [7, 8, 11]
+        versions: [8, 11, 17, 21]
         type: [jdk, jre]
         os: [alpine, debian]
     env:
