--- a/21/jre/alpine/Dockerfile
+++ b/21/jre/alpine/Dockerfile
@@ -1,11 +1,11 @@
 FROM eclipse-temurin:21-jre-alpine
 
-RUN apk add -U --no-cache curl bash
+RUN apk add -U --no-cache curl bash && apk upgrade --no-cache
 
 ENV TZ Pacific/Tahiti
 ENV LANG fr_FR:UTF-8
 ENV LANGUAGE fr
 ENV LC_ALL fr_FR.UTF-8
 
-COPY 21/jdk/alpine/install_certs /tmp/install_certs
+COPY 21/jre/alpine/install_certs /tmp/install_certs
 RUN bash -xe /tmp/install_certs
