--- a/17/jdk/debian/Dockerfile
+++ b/17/jdk/debian/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:17-slim-buster
 
-ENV TZ Pacific/Tahiti
+ENV TZ=Pacific/Tahiti
 
 RUN apt-get update && apt-get install -y --no-install-recommends locales curl \
     && sed -i -e 's/# fr_FR.UTF-8 UTF-8/fr_FR.UTF-8 UTF-8/' /etc/locale.gen \
@@ -10,9 +10,9 @@ RUN apt-get update && apt-get install -y --no-install-recommends locales curl \
     && dpkg-reconfigure -f noninteractive tzdata \
     && rm -rf /var/lib/apt/lists/*
 
-ENV LANG fr_FR:UTF-8
-ENV LANGUAGE fr
-ENV LC_ALL fr_FR.utf8
+ENV LANG=fr_FR:UTF-8
+ENV LANGUAGE=fr
+ENV LC_ALL=fr_FR.utf8
 
 COPY install_certs /tmp/install_certs
 RUN sh /tmp/install_certs
