--- a/21/jdk/debian/Dockerfile
+++ b/21/jdk/debian/Dockerfile
@@ -5,10 +5,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends locales curl \
     && locale-gen \
     && rm -rf /var/lib/apt/lists/*
 
-ENV TZ Pacific/Tahiti
-ENV LANG fr_FR:UTF-8
-ENV LANGUAGE fr
-ENV LC_ALL fr_FR.UTF-8
+ENV TZ=Pacific/Tahiti
+ENV LANG=fr_FR:UTF-8
+ENV LANGUAGE=fr
+ENV LC_ALL=fr_FR.UTF-8
 
-COPY 21/jdk/debian/install_certs /tmp/install_certs
+COPY 21/jdk/debian/install_certs-21 /tmp/install_certs
 RUN bash -xe /tmp/install_certs
