--- a/8/jdk/debian/Dockerfile
+++ b/8/jdk/debian/Dockerfile
@@ -3,7 +3,7 @@ FROM openjdk:8-jdk-buster
 COPY install_certs /tmp/install_certs
 RUN sh /tmp/install_certs
 
-ENV TZ Pacific/Tahiti
+ENV TZ=Pacific/Tahiti
 
 RUN apt-get update && apt-get install -y --no-install-recommends locales \
     && sed -i -e 's/# fr_FR.UTF-8 UTF-8/fr_FR.UTF-8 UTF-8/' /etc/locale.gen \
@@ -13,6 +13,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends locales \
     && dpkg-reconfigure -f noninteractive tzdata \
     && rm -rf /var/lib/apt/lists/*
 
-ENV LANG fr_FR:UTF-8
-ENV LANGUAGE fr
-ENV LC_ALL fr_FR.utf8
+ENV LANG=fr_FR:UTF-8
+ENV LANGUAGE=fr
+ENV LC_ALL=fr_FR.utf8
