--- a/21/jre/alpine/Dockerfile
+++ b/21/jre/alpine/Dockerfile
@@ -2,10 +2,10 @@ FROM eclipse-temurin:21-jre-alpine
 
 RUN apk add -U --no-cache curl bash && apk upgrade --no-cache
 
-ENV TZ Pacific/Tahiti
-ENV LANG fr_FR:UTF-8
-ENV LANGUAGE fr
-ENV LC_ALL fr_FR.UTF-8
+ENV TZ=Pacific/Tahiti
+ENV LANG=fr_FR:UTF-8
+ENV LANGUAGE=fr
+ENV LC_ALL=fr_FR.UTF-8
 
-COPY 21/jre/alpine/install_certs /tmp/install_certs
+COPY 21/jre/alpine/install_certs-21 /tmp/install_certs
 RUN bash -xe /tmp/install_certs
