--- a/21/jdk/alpine/Dockerfile
+++ b/21/jdk/alpine/Dockerfile
@@ -7,5 +7,5 @@ ENV LANG=fr_FR:UTF-8
 ENV LANGUAGE=fr
 ENV LC_ALL=fr_FR.UTF-8
 
-COPY 21/jdk/alpine/install_certs-21 /tmp/install_certs
+COPY install_certs-21 /tmp/install_certs
 RUN bash -xe /tmp/install_certs
